aws-eks-demo/frontend-deployment-eks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: 531728396484.dkr.ecr.ap-south-1.amazonaws.com/lms-frontend:1

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
