aws-eks-demo/login-deployment-eks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-deployment
spec:
  replicas: 2

  selector:
    matchLabels:
      app: login

  template:
    metadata:
      labels:
        app: login

    spec:
      containers:
        - name: login
          image: 531728396484.dkr.ecr.ap-south-1.amazonaws.com/lms-login:1

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
