aws-eks-demo/mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  serviceName: mongodb
  replicas: 2

  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
        - name: mongodb
          image: mongo:7
          ports:
            - containerPort: 27017

          volumeMounts:
            - name: mongo-data
              mountPath: /data/db

  volumeClaimTemplates:
    - metadata:
        name: mongo-data

      spec:
        accessModes:
          - ReadWriteOnce

        storageClassName: ebs-gp3

        resources:
          requests:
            storage: 1Gi
