aws-eks-demo/payment-deployment-eks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
spec:
  replicas: 2

  selector:
    matchLabels:
      app: payment

  template:
    metadata:
      labels:
        app: payment

    spec:
      containers:
        - name: payment
          image: 531728396484.dkr.ecr.ap-south-1.amazonaws.com/lms-payment:1

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
