aws-eks-demo/login-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-service
spec:
  type: ClusterIP
  selector:
    app: login
  ports:
    - port: 3000
      targetPort: 3000
