aws-eks-demo/payment-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  type: NodePort

  selector:
    app: payment

  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30080
