aws-eks-demo/lms-eks-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lms-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: login-service
                port:
                  number: 3000

          - path: /payment
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 3000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
